Code cleanup sonarlint (#76)